[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "cmake>=3.21",
  "ninja>=1.10",
]

build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.cibuildwheel]
environment = {VCPKG_ROOT = "vcpkg"}
skip = "*-win32 *-manylinux_i686 pp* cp36-* *-musllinux_*"

# test-command = "pytest {project}/tests"
# test-extras = "test"

before-all = [
  "pipx install -f --pip-args=\"-c {project}/constraints-ci.txt\" cmake",
  "cmake --version",
  "pipx install -f --pip-args=\"-c {project}/constraints-ci.txt\" ninja",
  "ninja --version",
]

[tool.cibuildwheel.linux]
before-all = [
  "yum install -y curl zip unzip tar",
  "git clone https://github.com/microsoft/vcpkg.git {project}/vcpkg",
  "{project}/vcpkg/bootstrap-vcpkg.sh",
]
