[build-system]
requires = [
  "setuptools>=52",
  "wheel",
]

build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.cibuildwheel]
environment = {VCPKG_ROOT = "vcpkg", MACOSX_DEPLOYMENT_TARGET="10.15"}
skip = "*-win32 *-manylinux_i686 pp* cp36-* cp37-* *-musllinux_*"
test-command = "pytest {package}/tests"
test-requires = "pytest"

[tool.cibuildwheel.linux]
before-all = [
  "yum install -y curl zip unzip tar",
  "git clone https://github.com/microsoft/vcpkg.git {project}/vcpkg",
  "{project}/vcpkg/bootstrap-vcpkg.sh",
]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
